--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
 						<testTarget>1.8</testTarget>
 					</configuration>
 				</plugin>
+				<plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.0.1</version>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 
