feat(project) update project layout

--- a/src/main/resources/cmis-createfolder.properties
+++ b/src/main/resources/cmis-createfolder.properties
@@ -1,4 +1,5 @@
 cmis.category=CMIS
+cms.category=CMS
 connectorDefinitionLabel=Create a folder
 connectorDefinitionDescription=Create a folder on a CMIS 1.1 server
 
