--- a/src/main/resources/cmis-deleteversionofdocument.properties
+++ b/src/main/resources/cmis-deleteversionofdocument.properties
@@ -1,4 +1,5 @@
 cmis.category=CMIS
+cms.category=CMS
 connectorDefinitionLabel=Delete a document version
 connectorDefinitionDescription=Delete a document version from a CMIS 1.1 server
 
