--- a/src/main/resources/cmis-uploadnewdocument.properties
+++ b/src/main/resources/cmis-uploadnewdocument.properties
@@ -1,4 +1,5 @@
 cmis.category=CMIS
+cms.category=CMS
 connectorDefinitionLabel=Upload a document
 connectorDefinitionDescription=Upload a document to a CMIS 1.1 server
 
