--- a/src/main/resources/cmis-uploadnewdocuments.properties
+++ b/src/main/resources/cmis-uploadnewdocuments.properties
@@ -1,4 +1,5 @@
 cmis.category=CMIS
+cms.category=CMS
 connectorDefinitionLabel=Upload a list of documents
 connectorDefinitionDescription=Upload a list of documents to a CMIS 1.1 server
 
