--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<artifactId>bonita-connectors</artifactId>
-		<groupId>org.bonitasoft.connectors</groupId>
-		<version>1.0.0</version>
-	</parent>
-
+	<groupId>org.bonitasoft.connectors</groupId>
 	<artifactId>bonita-connector-cmis</artifactId>
 	<version>3.0.4-SNAPSHOT</version>
 
 	<properties>
+		<!-- Maven -->
+		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.build.timestamp.format>yyyy.MM.dd-hh.mm</maven.build.timestamp.format>
+
 		<bonita.engine.version>7.8.0</bonita.engine.version>
+		
+		<!-- Connectors -->
+		<cmis-createfolder.def.id>cmis-createfolder</cmis-createfolder.def.id>
+		<cmis-createfolder.def.version>2.0.1</cmis-createfolder.def.version>
+		<cmis-createfolder.impl.id>${cmis-createfolder.def.id}-impl</cmis-createfolder.impl.id>
+		<cmis-createfolder.impl.version>${project.version}</cmis-createfolder.impl.version>
+		<cmis-createfolder.main-class>org.bonitasoft.connectors.cmis.CreateFolder</cmis-createfolder.main-class>
+		
+		<cmis-deletefolder.def.id>cmis-deletefolder</cmis-deletefolder.def.id>
+		<cmis-deletefolder.def.version>2.0.1</cmis-deletefolder.def.version>
+		<cmis-deletefolder.impl.id>${cmis-deletefolder.def.id}-impl</cmis-deletefolder.impl.id>
+		<cmis-deletefolder.impl.version>${project.version}</cmis-deletefolder.impl.version>
+		<cmis-deletefolder.main-class>org.bonitasoft.connectors.cmis.DeleteFolder</cmis-deletefolder.main-class>
+		
+		<cmis-deletedocument.def.id>cmis-deletedocument</cmis-deletedocument.def.id>
+		<cmis-deletedocument.def.version>2.0.1</cmis-deletedocument.def.version>
+		<cmis-deletedocument.impl.id>${cmis-deletedocument.def.id}-impl</cmis-deletedocument.impl.id>
+		<cmis-deletedocument.impl.version>${project.version}</cmis-deletedocument.impl.version>
+		<cmis-deletedocument.main-class>org.bonitasoft.connectors.cmis.DeleteDocument</cmis-deletedocument.main-class>
+		
+		<cmis-deleteversionofdocument.def.id>cmis-deleteversionofdocument</cmis-deleteversionofdocument.def.id>
+		<cmis-deleteversionofdocument.def.version>2.0.1</cmis-deleteversionofdocument.def.version>
+		<cmis-deleteversionofdocument.impl.id>${cmis-deleteversionofdocument.def.id}-impl</cmis-deleteversionofdocument.impl.id>
+		<cmis-deleteversionofdocument.impl.version>${project.version}</cmis-deleteversionofdocument.impl.version>
+		<cmis-deleteversionofdocument.main-class>org.bonitasoft.connectors.cmis.DeleteVersionOfDocument</cmis-deleteversionofdocument.main-class>
+		
+		<cmis-downloadadocument.def.id>cmis-downloadadocument</cmis-downloadadocument.def.id>
+		<cmis-downloadadocument.def.version>2.0.1</cmis-downloadadocument.def.version>
+		<cmis-downloadadocument.impl.id>${cmis-downloadadocument.def.id}</cmis-downloadadocument.impl.id>
+		<cmis-downloadadocument.impl.version>${project.version}</cmis-downloadadocument.impl.version>
+		<cmis-downloadadocument.main-class>org.bonitasoft.connectors.cmis.DownloadDocument</cmis-downloadadocument.main-class>
+		
+		<cmis-listdocuments.def.id>cmis-listdocuments</cmis-listdocuments.def.id>
+		<cmis-listdocuments.def.version>1.0.0</cmis-listdocuments.def.version>
+		<cmis-listdocuments.impl.id>${cmis-listdocuments.def.id}-impl</cmis-listdocuments.impl.id>
+		<cmis-listdocuments.impl.version>${project.version}</cmis-listdocuments.impl.version>
+		<cmis-listdocuments.main-class>org.bonitasoft.connectors.cmis.ListDocuments</cmis-listdocuments.main-class>
+		
+		<cmis-uploadnewdocument.def.id>cmis-uploadnewdocument</cmis-uploadnewdocument.def.id>
+		<cmis-uploadnewdocument.def.version>2.0.1</cmis-uploadnewdocument.def.version>
+		<cmis-uploadnewdocument.impl.id>${cmis-uploadnewdocument.def.id}-impl</cmis-uploadnewdocument.impl.id>
+		<cmis-uploadnewdocument.impl.version>${project.version}</cmis-uploadnewdocument.impl.version>
+		<cmis-uploadnewdocument.main-class>org.bonitasoft.connectors.cmis.UploadNewDocument</cmis-uploadnewdocument.main-class>
+		
+		<cmis-uploadnewdocuments.def.id>cmis-uploadnewdocuments</cmis-uploadnewdocuments.def.id>
+		<cmis-uploadnewdocuments.def.version>1.0.0</cmis-uploadnewdocuments.def.version>
+		<cmis-uploadnewdocuments.impl.id>${cmis-uploadnewdocuments.def.id}-impl</cmis-uploadnewdocuments.impl.id>
+		<cmis-uploadnewdocuments.impl.version>${project.version}</cmis-uploadnewdocuments.impl.version>
+		<cmis-uploadnewdocuments.main-class>org.bonitasoft.connectors.cmis.UploadNewDocuments</cmis-uploadnewdocuments.main-class>
+		
+		<cmis-uploadnewversionofdocument.def.id>cmis-uploadnewversionofdocument</cmis-uploadnewversionofdocument.def.id>
+		<cmis-uploadnewversionofdocument.def.version>2.0.1</cmis-uploadnewversionofdocument.def.version>
+		<cmis-uploadnewversionofdocument.impl.id>${cmis-uploadnewversionofdocument.def.id}-impl</cmis-uploadnewversionofdocument.impl.id>
+		<cmis-uploadnewversionofdocument.impl.version>${project.version}</cmis-uploadnewversionofdocument.impl.version>
+		<cmis-uploadnewversionofdocument.main-class>org.bonitasoft.connectors.cmis.UploadNewVersionOfDocument</cmis-uploadnewversionofdocument.main-class>
+		
+		<!-- Dependencies -->
 		<jaxb.version>2.2.7</jaxb.version>
 		<opencmis.version>1.1.0</opencmis.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<!-- Test -->
+		<junit-jupiter-engine.version>5.6.2</junit-jupiter-engine.version>
+		<junit-platform-runner.version>1.6.2</junit-platform-runner.version>
+		<jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+		<sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
+		<mockito-core.version>3.5.13</mockito-core.version>
+		<assertj-core.version>3.16.1</assertj-core.version>
+		<logback-classic.version>1.2.3</logback-classic.version>
+
+		<!-- Maven plugins -->
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
+		<groovy-maven-plugin.version>2.1.1</groovy-maven-plugin.version>
+		<groovy-all.version>2.4.20</groovy-all.version>
+		<maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+		<nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
+		<maven-source-plugin.version>3.2.0</maven-source-plugin.version>
+		<license-maven-plugin.version>4.0.rc2</license-maven-plugin.version>
+
+		<!-- Sonar -->
+		<sonar.projectKey>bonitasoft_bonita-connector-cmis</sonar.projectKey>
+		<sonar.organization>bonitasoft</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 
@@ -60,173 +146,236 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Test -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit-jupiter-engine.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<version>${junit-jupiter-engine.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-runner</artifactId>
+			<version>${junit-platform-runner.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${mockito-core.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.23.4</version>
+			<version>${mockito-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>1.3</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback-classic.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
 	<build>
+		<defaultGoal>verify</defaultGoal>
+		<resources>
+			<resource>
+				<directory>src/main/resources-filtered</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>2.5.3</version>
+					<groupId>com.mycila</groupId>
+					<artifactId>license-maven-plugin</artifactId>
+					<version>${license-maven-plugin.version}</version>
 					<configuration>
-						<tagNameFormat>@{project.version}</tagNameFormat>
+						<licenseSets>
+							<licenseSet>
+								<header>${project.basedir}/src/license/header.txt</header>
+								<includes>
+									<include>**/*.java</include>
+								</includes>
+							</licenseSet>
+						</licenseSets>
 					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.5</version>
+					<version>${maven-assembly-plugin.version}</version>
+					<configuration>
+						<descriptorSourceDirectory>${project.basedir}/src/assembly</descriptorSourceDirectory>
+					</configuration>
 					<executions>
 						<execution>
-							<id>assemble</id>
-							<phase>none</phase>
+							<id>package-connectors</id>
+							<phase>package</phase>
+							<goals>
+								<goal>single</goal>
+							</goals>
+							<configuration>
+								<appendAssemblyId>true</appendAssemblyId>
+							</configuration>
 						</execution>
 					</executions>
 				</plugin>
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-						<testSource>1.8</testSource>
-						<testTarget>1.8</testTarget>
-					</configuration>
+					<groupId>org.codehaus.gmaven</groupId>
+					<artifactId>groovy-maven-plugin</artifactId>
+					<version>${groovy-maven-plugin.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.codehaus.groovy</groupId>
+							<artifactId>groovy-all</artifactId>
+							<version>${groovy-all.version}</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.0.1</version>
-                </plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<enableAssertions>true</enableAssertions>
+						<forkCount>1</forkCount>
+						<reuseForks>true</reuseForks>
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>org.junit.platform</groupId>
+							<artifactId>junit-platform-runner</artifactId>
+							<version>${junit-platform-runner.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco-maven-plugin.version}</version>
+					<configuration>
+						<append>true</append>
+					</configuration>
+					<executions>
+						<execution>
+							<id>prepare-agent</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>prepare-agent-integration</id>
+							<goals>
+								<goal>prepare-agent-integration</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>jacoco-site</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>${sonar-maven-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>nexus-staging-maven-plugin</artifactId>
+					<version>${nexus-staging-maven-plugin.version}</version>
+					<extensions>true</extensions>
+					<configuration>
+						<serverId>ossrh</serverId>
+						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+						<autoReleaseAfterClose>false</autoReleaseAfterClose>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>all</id>
-						<phase>package</phase>
+						<id>license-check-file-header</id>
 						<goals>
-							<goal>single</goal>
+							<goal>check</goal>
+						</goals>
+						<phase>validate</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.gmaven</groupId>
+				<artifactId>groovy-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>execute</goal>
 						</goals>
 						<configuration>
-							<classifier>all</classifier>
-							<descriptor>${basedir}/connector-assembly.xml</descriptor>
+							<source>${project.basedir}/src/script/dependencies-as-var.groovy</source>
 						</configuration>
 					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>${maven-source-plugin.version}</version>
+				<executions>
 					<execution>
-						<id>createfolder-impl</id>
-						<phase>package</phase>
+						<id>attach-sources</id>
 						<goals>
-							<goal>single</goal>
+							<goal>jar-no-fork</goal>
 						</goals>
-						<configuration>
-							<descriptor>${basedir}/createfolder-assembly.xml</descriptor>
-						</configuration>
 					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc-plugin.version}</version>
+				<executions>
 					<execution>
-						<id>deletedocument-impl</id>
-						<phase>package</phase>
+						<id>attach-javadocs</id>
 						<goals>
-							<goal>single</goal>
+							<goal>jar</goal>
 						</goals>
-						<configuration>
-							<descriptor>${basedir}/deletedocument-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>deletefolder-impl</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/deletefolder-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>deleteversionofdocument-impl</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/deleteversionofdocument-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>downloaddocument-impl</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/downloaddocument-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>listdocuments-impl</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/listdocuments-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>uploadnewdocument-impl</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/uploadnewdocument-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>uploadnewdocuments-impl</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/uploadnewdocuments-assembly.xml</descriptor>
-						</configuration>
-					</execution>
-					<execution>
-						<id>uploadnewversionofdocument-impl</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>${basedir}/uploadnewversionofdocument-assembly.xml</descriptor>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -235,8 +384,8 @@
 
 
 	<scm>
-		<developerConnection>scm:git:https://${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-cmis.git</developerConnection>
-		<connection>scm:git:https://${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-cmis.git</connection>
+		<developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-cmis.git</developerConnection>
+		<connection>scm:git:git@github.com:bonitasoft/bonita-connector-cmis.git</connection>
 		<url>https://github.com/bonitasoft/bonita-connector-cmis</url>
 		<tag>HEAD</tag>
 	</scm>
