--- a/src/main/resources/cmis-deletedocument.properties
+++ b/src/main/resources/cmis-deletedocument.properties
@@ -1,4 +1,5 @@
 cmis.category=CMIS
+cms.category=CMS
 connectorDefinitionLabel=Delete a document
 connectorDefinitionDescription=Delete a document from a CMIS 1.1 server
 
