--- a/src/main/resources/cmis-deletefolder.properties
+++ b/src/main/resources/cmis-deletefolder.properties
@@ -1,4 +1,5 @@
 cmis.category=CMIS
+cms.category=CMS
 connectorDefinitionLabel=Delete a folder
 connectorDefinitionDescription=Delete a folder from a CMIS 1.1 server
 
