--- a/src/main/resources/cmis-downloaddocument.properties
+++ b/src/main/resources/cmis-downloaddocument.properties
@@ -1,4 +1,5 @@
 cmis.category=CMIS
+cms.category=CMS
 connectorDefinitionLabel=Download a document
 connectorDefinitionDescription=Download a document from a CMIS 1.1 server
 
