--- a/src/main/resources/cmis-listdocuments.properties
+++ b/src/main/resources/cmis-listdocuments.properties
@@ -1,4 +1,5 @@
 cmis.category=CMIS
+cms.category=CMS
 connectorDefinitionLabel=List documents
 connectorDefinitionDescription=Lists documents from a folder on a CMIS 1.1 server
 
