chore(changelog-action): add comment and remove the unused Version - explain the presence of the package.json file required by the generate-changelog-action.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
 {
   "name": "bonita-connector-cmis",
-  "version": "3.0.6"
+  "coment": "This json file is required by the generate-changelog-action, do not remove it."
 }
