--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.build.timestamp.format>yyyy.MM.dd-hh.mm</maven.build.timestamp.format>
 
-        <bonita.engine.version>7.13.0</bonita.engine.version>
+        <bonita.engine.version>7.14.0</bonita.engine.version>
 
         <!-- Connectors -->
         <cmis-createfolder.def.id>cmis-createfolder</cmis-createfolder.def.id>
@@ -98,23 +98,23 @@
         <opencmis.version>1.1.0</opencmis.version>
 
         <!-- Test -->
-        <junit-jupiter-engine.version>5.9.1</junit-jupiter-engine.version>
-        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
-        <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
-        <mockito-core.version>4.9.0</mockito-core.version>
-        <assertj-core.version>3.23.1</assertj-core.version>
-        <logback-classic.version>1.2.11</logback-classic.version>
+        <junit-jupiter-engine.version>5.10.1</junit-jupiter-engine.version>
+        <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
+        <sonar-maven-plugin.version>3.10.0.2594</sonar-maven-plugin.version>
+        <mockito-core.version>5.7.0</mockito-core.version>
+        <assertj-core.version>3.24.2</assertj-core.version>
+        <logback-classic.version>1.2.12</logback-classic.version>
 
         <!-- Maven plugins -->
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <maven.compiler.release>${java.version}</maven.compiler.release>
-        <maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
+        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
         <groovy-maven-plugin.version>2.1.1</groovy-maven-plugin.version>
-        <groovy.version>3.0.13</groovy.version>
-        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
+        <groovy.version>3.0.19</groovy.version>
+        <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
-        <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
-        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
+        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
         <license-maven-plugin.version>4.1</license-maven-plugin.version>
 
         <!-- Sonar -->
